# KindaC

./: .gitignore  CPrinta.hs  KindaC.cabal  README.md  a.kc  a.out  aaaa.kc  addtest.hs  basic-case.kc  bb.kc  constructor-unions-not-unifying.kc  dashtest.c  dashtest.out  datafun.c  datafun.kc  dupa.kc  dupfuck.kc  dupsko.kc  envdoublefntype.kc  envfn.kc  funalone.kc  idfun.kc  inst.kc  inst2.kc  local-inst.kc  monotest.kc  package.yaml  qc  rec.kc  stack.yaml  str.kc  str2.kc  str3.kc  t2.kc  test.c  test.kc  test2.kc  test3.kc  testprelude.kc  tt.kc  (+5 more)
app/: Main.hs
ctest/: arrt.c  cfun.c  static-array.c  structdef.c  tag.c  unionequal.c  unions.c
doc/: README.md  comments  graveyard
error-handling/: basic-case.kc  handling-function-defs-vs-calls  incorrect-instance-selection.kc  inner-types-mismatch-and-the-error-is-funny.kc  joindataenv.kc  t12.kc
examples/: README.md  design.kc  resolving-stuff.kc  stupid.kc  test.kc
future-tests/: folds.kc  p2.kc  post.kc  str.kc  strint.kc  use.kc
incorrect/: bad-codegen.kc  incorrect-envs-in-ff.kc  inst-referring-to-previous-inst-loops-the-compiler.kc  it-just-dont-work.kc  kek.kc  mapmaybe.kc  myshit.kc  myshit2.kc  parser-fails-on-comments-in-line-fold.kc  recex.kc  recursive-instances-with-different-localities-error-2.kc  recursive-instances-with-different-localities-error.kc  this-program-compiles-but-hh-does-not-have-a-return-type.kc
intermediate-test-outputs-c5ed50cfd54fee14/: 0_dashtest  0_dashtest.c  0_trailing-dash  0_trailing-dash.c  1_t1  1_t1.c  1_t11  1_t11.c  1_t12  1_t12.c  1_t13  1_t13.c  1_t2  1_t2.c  1_t3  (+36 more)
(+403 files in other folders)
