name:                KindaC
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/KindaC#readme
license:             BSD3
license-file:        LICENSE
author:              Big Bobby
maintainer:          example@example.com
copyright:           2022 Big Bobby
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AST
                     , Parser
                     , Resolver
                     , Typecheck
                     , Concretizer
                     , CPrettyPrinter
                     , ASTPrettyPrinter
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes
                     , data-fix
                     , transformers
                     , microlens
                     , microlens-th
                     , containers
                     , megaparsec
                     , parser-combinators
                     , deriving-compat
                     , bifunctors
                     , prettyprinter
                     , process
                     , bimap

test-suite kc-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test/src
  build-depends:  base >=4.7 && <5
                , QuickCheck
                , hspec
  default-language: Haskell2010